fixed language difference

--- a/templates/auth_system/base.html
+++ b/templates/auth_system/base.html
@@ -10,7 +10,7 @@
 <body class="auth-page">
 
     <div class="auth-card">
-        <h2 class="auth-header">{% block header %}Authorization{% endblock %}</h2>
+        <h2 class="auth-header">{% block header %}Authentication{% endblock %}</h2>
 
         {% if messages %}
             <ul class="messages" style="list-style: none; padding: 0; margin-bottom: 20px;">
