--- a/templates/groups/group_update.html
+++ b/templates/groups/group_update.html
@@ -1,17 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Редагувати групу: {{ group.name }}</h2>
+<h2>Update Group: {{ group.name }}</h2>
 
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Зберегти зміни</button>
+    <button type="submit">Save Changes</button>
 </form>
 
 <form method="post" action="{% url 'groups:group-delete' group.uuid %}" style="margin-top: 1em;">
     {% csrf_token %}
-    <button type="submit" onclick="return confirm('Ви точно хочете видалити групу?');">Видалити групу</button>
+    <button type="submit" onclick="return confirm('Are you sure you want to delete the group?');">Delete Group</button>
 </form>
 
-<a href="{% url 'messages:chat-list' %}">← Повернутися до списку чатів</a>
+<a href="{% url 'messages:chat-list' %}">← Return to chat list</a>
 {% endblock %}
